# collatz-pattern-lab

./: .gitignore  README.md  lake-manifest.json  lakefile.lean  modal_app.py  proof_attempts.jsonl  proof_manifest.json  pyproject.toml  runs.md
certificate_store/: run019_run_result.json  run020_audit_summary.json  run023_accepted_action_trace.jsonl  run023_run_result.json  run023_s6_lemma_certificates.jsonl  run023_s6_lemma_replay_report.json  run024_final_proof_object.json  run024_run_result.json  run024_top_level_certificates.jsonl  run024_top_level_replay_report.json  run028_final_proof_object.json  run028_top_level_replay_report.json  run029_accepted_action_trace.jsonl  run029_run_result.json  run029_s3_exact_dependency_replay_report.json  run030_final_proof_object.json  run030_run_result.json  run030_top_level_replay_report.json  run034_accepted_action_trace.jsonl  run034_run_result.json  run034_s6_lemma_certificates.jsonl  run035_s6_lemma_certificates.jsonl  run045_natural_viability_kernel_certificate.json  run046_accepted_action_trace.jsonl  run046_final_proof_object.json  run046_run_result.json  run046_scc_guarded_ranking_certificate.json  run046_top_level_certificates.jsonl  run046_top_level_replay_report.json  run048_run_result.json  run051_run_result.json  run056b_coverage_map.json  run056b_entry_map.json  run056b_no_escape_map.json  run056b_run_result.json  run056b_well_founded_bridge.json  run057_parent_level_coverage_taxonomy.json  run057_run_result.json  run057_uncovered_parent_families.jsonl  run058_p1_direct_descent_certificate.json  (+44 more)
tests/: test_debt.py  (+156 more)
(+568 files in other folders)
