[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-pattern-lab"
version = "0.1.0"
description = "ML-assisted experimental environment for Collatz pattern discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "collatz-pattern-lab contributors" }]
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "pyarrow",
  "polars",
  "pydantic",
  "pyyaml",
  "tqdm",
  "matplotlib",
  "scikit-learn",
  "tensorboard",
  "modal",
  "pytest",
  "rich",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
